added styles to header and about me

--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
 <body>
     <header>
         <h1>TYLER BECK</h1>
-        <nav>
-            <a href="#about">ABOUT ME</a>
-            <a href="#portfolio">PORTFOLIO</a>
-            <a href="contact">CONTACT ME</a>
+        <nav class="navigation">
+            <ul>
+                <li>
+                   <a href="#about">ABOUT ME</a> 
+                </li>
+               <li>
+                   <a href="#portfolio">PORTFOLIO</a>
+               </li>
+               <li>
+                   <a href="contact">CONTACT ME</a>
+               </li>
+             </ul>         
         </nav>
     </header>
+    
+    <!--about me section-->
     <div>
-        <img src="./assets/images/me.jpg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
-        <div>
-            <h3>ABOUT ME</h3>
+        <img src="./assets/images/me.jpg" alt="Me" class="portrait" width="600" height="650">
+        <div class="about-me">
+            <h3 id="about">ABOUT ME</h3>
             <p>I am a twenty-three year old that currently manages at a grocery store. Being that I dont want to be in retail for the rest of my life, and working there for longer than I antisipated; I have branched out to coding to start a new journey an exciting demanding career. Coding has always been something that has intruiged me, but with having no experience with it I was never able to push myself to learn. I just recently started coding classes and it instantly grasped me. Just scratching the surface diving in to the HTML and CSS basics I find myself wanting to learn more and more. I hope to make this a professional career where I'm wanting to go with it is still unknown. I would like to hopefully become a full-stack developer and work my way up a company chain to build more and more knowledge in the feild.</p>
               <p>Outside of career path goals I am a layed back human being. If a person was to ask me if I was an introvert or an extrovert I would tell them that I am both. I am a homebody and I love my alone time, but at the same time I enjoy hanging out with friends and going to do things. I have lots of hobbies! I snowboard reguraly during the winter season its a once a year treat that makes me happy. During the summer I enjoy boating, and river days are always a nice way for me to relax. In fall and spring I enjoy disc golfing its a newer hobby that I have picked up, but it is by far one of my favorite activities to pass time.</p>
               <p>Overall I am just your everyday human. I have goals, dreams, people, and activities that make me happy. I dont know what my future will look like, but I do have dreams of what I want it to be thats the excting part about life the uncertanty. Thats me thank you for taking your time to read up!</p>
@@ -27,8 +37,11 @@
               <p>tel: 530-334-3103</p>
         </div>
     </div>
+
+    <!--portfolio section-->
     <div>
-        <h3>PORTFOLIO</h3>
+        <h3 id="portfolio">PORTFOLIO</h3>
+        <!--
         <div class="">
             <a href="https://tybeck7.github.io/horiseon-refactured/"><img src="./assets/images/horiseon-landingpage.png" style="width:100%" onclick="onClick(this)" alt="horisoen project landingpage"></a>
             <a href="https://google.com"><img src="./assets/images/project-2.png" style="width:100%" onclick="onClick(this)" alt="project 2 landingpage"></a>
@@ -51,8 +64,15 @@
             <a href="https://google.com"><img src="./assets/images/project-10.png" style="width:100%" onclick="onClick(this)" alt="project 10 landingpage"></a>
           <a href="https://google.com"><img src="./assets/images/project-11.png" style="width:100%" onclick="onClick(this)" alt="project 11 landingpage"></a>
           <a href="https://google.com"><img src="./assets/images/project-12.png" style="width:100%" onclick="onClick(this)" alt="project 12 landingpage"></a>
-          </div>
+          </div>-->
     </div>
+
+    <footer>
+        <div>
+            <h3>INFO</h3>
+            <p>I am new to web development. I am a quick and adaptive learner and am willing to take on any chanllange thrown my way!</p>
+        </div>
+    </footer>
 
 
 
