style to contact section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <a href="https://google.com"><img src="./assets/images/project-12.png" style="width:190px" onclick="onClick(this)" alt="project 12 landingpage"></a>
     </div>
 
+    <!--contact section-->
     <div class="contact-section">
         <div>
             <h3 id="contact" class="topic-style">CONTACT ME</h3>
