--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
         <a href="https://tybeck7.github.io/horiseon-refactured/"><img src="./assets/images/horiseon-landingpage.png" style="width:190px" onclick="onClick(this)" alt="horisoen project landingpage"></a>
         <a href="https://tybeck7.github.io/my-roulette/#"><img src="./assets/images/roulette.png" style="width:190px" onclick="onClick(this)" alt="project 2 landingpage"></a>
-        <a href="https://google.com"><img src="./assets/images/Screen Shot 2022-01-04 at 4.40.23 PM.png" style="width:190px" onclick="onClick(this)" alt="project 3 landingpage"></a
+        <a href="https://boiling-gorge-57801.herokuapp.com/"><img src="./assets/images/handyhelper.png" style="width:190px" onclick="onClick(this)" alt="project 2 landingpage"></a>
         <a href="https://google.com"><img src="./assets/images/projects-4.png" style="width:190px" onclick="onClick(this)" alt="project 4 landingpage"></a>
         <a href="https://google.com"><img src="./assets/images/Project 5.png" style="width:190px" onclick="onClick(this)" alt="project 5 landingpage"></a>
         <a href="https://google.com"><img src="./assets/images/project-6.png" style="width:190px" onclick="onClick(this)" alt="project 6 landingpage"></a>
