--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="https://tybeck7.github.io/horiseon-refactured/"><img src="./assets/images/horiseon-landingpage.png" style="width:190px" onclick="onClick(this)" alt="horisoen project landingpage"></a>
         <a href="https://tybeck7.github.io/my-roulette/#"><img src="./assets/images/roulette.png" style="width:190px" onclick="onClick(this)" alt="project 2 landingpage"></a>
         <a href="https://boiling-gorge-57801.herokuapp.com/"><img src="./assets/images/handyhelper.png" style="width:190px" onclick="onClick(this)" alt="project 2 landingpage"></a>
-        <a href="https://google.com"><img src="./assets/images/projects-4.png" style="width:190px" onclick="onClick(this)" alt="project 4 landingpage"></a>
+        <a href="https://afternoon-fjord-21260.herokuapp.com/"><img src="./assets/images/get-baked.png" style="width:190px" onclick="onClick(this)" alt="project 4 landingpage"></a>
         <a href="https://google.com"><img src="./assets/images/Project 5.png" style="width:190px" onclick="onClick(this)" alt="project 5 landingpage"></a>
         <a href="https://google.com"><img src="./assets/images/project-6.png" style="width:190px" onclick="onClick(this)" alt="project 6 landingpage"></a>
         <a href="https://google.com"><img src="./assets/images/project-7.png" style="width:190px" onclick="onClick(this)" alt="project 7 landingpage"></a>
